# rust_pocs

./: .gitignore  LICENSE  Makefile  README.md  cog.toml  pre-commit.sh
bin_from_ninja/: .containerignore  .dockerignore  .gitignore  Cargo.toml  Containerfile  Containerfile_debian  Containerfile_debian_pixi  Containerfile_msrv  Containerfile_ubuntu  Containerfile_ubuntu_pixi  Dockerfile  Dockerfile_msrv  Makefile  README.md  example.ninja  pixi.toml  podman.bash  podman_debian.bash  podman_debian_pixi.bash  podman_demo.bash  podman_ubuntu.bash  podman_ubuntu_pixi.bash
bin_from_ninja/assert_fs/: Cargo.toml
bin_from_ninja/assert_fs/src/: lib.rs
bin_from_ninja/assert_fs/src/fixture/: child.rs  dir.rs  errors.rs  mod.rs  tools.rs
bin_from_ninja/backup/: Cargo.toml  main.rs
bin_from_ninja/backup/src/: main.rs
bin_from_ninja/common/: Cargo.toml  lib.rs
bin_from_ninja/ninja_bootstrap/: Cargo.toml  main.rs  ninja_writer.rs
bin_from_ninja/ninja_bootstrap/src/: build.rs  lib.rs  main.rs  ninja_dump.rs  ninja_writer.rs  rule.rs
bin_from_ninja/synchronize_backup/: Cargo.toml  main.rs
bin_from_ninja/synchronize_backup/src/: main.rs
bin_from_ninja/synchronize_partially/: Cargo.toml  main.rs
bin_from_ninja/synchronize_partially/src/: main.rs
bin_from_ninja/temporary_directory/: Cargo.toml
bin_from_ninja/temporary_directory/src/: lib.rs
bin_from_ninja/test_helper/: Cargo.toml  lib.rs
bin_from_ninja/test_helper/src/: lib.rs
coroutine/: .gitignore  Cargo.toml  Makefile  README.md
coroutine/basic_renamer/: Cargo.toml  main.rs
coroutine/common/: Cargo.toml  lib.rs
coroutine/generic_renamer/: Cargo.toml  lib.rs  main.rs
coroutine/renamer/: Cargo.toml  async_renamer.rs  lib.rs  sync_renamer.rs
structured_concurrency/: .gitignore  Cargo.toml  Makefile  README.md
structured_concurrency/src/: lib.rs  main.rs
