[workspace]
members = [
    "assert_fs",
    "backup",
    "ninja_bootstrap",
    "synchronize_backup",
    "synchronize_partially",
    "test_helper",
]
resolver = "2"

[profile.dev]
debug = false

[profile.release]
strip = true

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
nursery = "warn"
pedantic = "warn"
