[workspace]
members = [
    "assert_fs",
    "backup",
    "ninja_bootstrap",
    "synchronize_backup",
    "synchronize_partially",
    "test_helper",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.81.0"

[profile.dev]
debug = false

[profile.release]
strip = true

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
nursery = "warn"
pedantic = "warn"
