[workspace]
members = [
    "backup",
    "common",
    "ninja_bootstrap",
    "synchronize_backup",
    "synchronize_partially",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.87.0"

[profile.dev]
debug = false

[profile.release]
strip = true

[workspace.lints.rust]
impl_trait_overcaptures = "warn"
let_underscore_drop = "warn"
macro_use_extern_crate = "warn"
non_ascii_idents = "forbid"
redundant_lifetimes = "warn"
unit_bindings = "warn"
unnameable_types = "warn"
unsafe_attr_outside_unsafe = "forbid"
unsafe_code = "forbid"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
# nursery category:
nursery = { level = "warn", priority = -1 }
# pedantic category:
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
# restriction category:
allow_attributes = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "warn"
dbg_macro = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
exit = "warn"
filetype_is_file = "warn"
format_push_string = "warn"
if_then_some_else_none = "warn"
infinite_loop = "warn"
iter_over_hash_type = "warn"
lossy_float_literal = "warn"
map_with_unused_argument_over_ranges = "warn"
mem_forget = "warn"
min_ident_chars = "warn"
mixed_read_write_in_expression = "warn"
mod_module_files = "warn"
multiple_inherent_impl = "warn"
mutex_atomic = "warn"
mutex_integer = "warn"
needless_raw_strings = "warn"
non_zero_suggestions = "warn"
partial_pub_fields = "warn"
precedence_bits = "warn"
print_stderr = "warn"
print_stdout = "warn"
pub_without_shorthand = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
renamed_function_params = "warn"
rest_pat_in_fully_bound_structs = "warn"
return_and_then = "warn"
same_name_method = "warn"
semicolon_inside_block = "warn"
str_to_string = "warn"
string_lit_chars_any = "warn"
string_to_string = "warn"
tests_outside_test_module = "warn"
todo = "warn"
try_err = "warn"
unnecessary_self_imports = "warn"
unneeded_field_pattern = "warn"
unseparated_literal_suffix = "warn"
unused_result_ok = "warn"
unused_trait_names = "warn"
use_debug = "warn"
