[workspace]
members = [
    "basic_renamer",
    "common",
    "generic_renamer",
    "renamer",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.83.0"

[profile.dev]
debug = false

[profile.release]
strip = true

[workspace.lints.rust]
non_ascii_idents = "forbid"
redundant_lifetimes = "warn"
unit_bindings = "warn"
unnameable_types = "warn"
unsafe_code = "forbid"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
# nursery category:
nursery = { level = "warn", priority = -1 }
# pedantic category:
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# restriction category:
allow_attributes = "warn"
assertions_on_result_states = "warn"
dbg_macro = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
exit = "warn"
filetype_is_file = "warn"
format_push_string = "warn"
if_then_some_else_none = "warn"
infinite_loop = "warn"
mem_forget = "warn"
min_ident_chars = "warn"
mixed_read_write_in_expression = "warn"
mod_module_files = "warn"
multiple_inherent_impl = "warn"
non_zero_suggestions = "warn"
partial_pub_fields = "warn"
print_stderr = "warn"
print_stdout = "warn"
renamed_function_params = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_name_method = "warn"
semicolon_inside_block = "warn"
str_to_string = "warn"
string_lit_chars_any = "warn"
string_to_string = "warn"
tests_outside_test_module = "warn"
todo = "warn"
try_err = "warn"
unnecessary_self_imports = "warn"
unneeded_field_pattern = "warn"
unseparated_literal_suffix = "warn"
unused_result_ok = "warn"
unused_trait_names = "warn"
use_debug = "warn"
