[package]
name = "backup"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }

[dev-dependencies]
assert_fs = { path = "../assert_fs" }
testresult = "0.3"
test_helper = { path = "../test_helper" }
