[package]
name = "backup"
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "backup"
path = "main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
common = { path = "../common" }
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }

[dev-dependencies]
assert_fs = "1"

[lints]
workspace = true
