[package]
name = "ninja_bootstrap"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1"
camino = "1"
cargo_metadata = "0.17"
glob = "0.3"
home = "0.5"
serde = { version = "1", features = ["derive"] }
snafu = { version = "0.7", default-features = false, features = ["std"] }
toml = { version = "0.7", default-features = false, features = ["parse"] }

[dev-dependencies]
anyhow = { version = "1", features = ["backtrace"] }

[[bin]]
name = "ninja_bootstrap"
test = false
