[package]
name = "ninja_bootstrap"
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1"
camino = "1"
cargo_metadata = "0.18"
glob = "0.3"
home = "0.5"
serde = { version = "1", features = ["derive"] }
snafu = { version = "0.8", default-features = false, features = ["std"] }
toml = { version = "0.8", default-features = false, features = ["parse"] }

[dev-dependencies]
anyhow = { version = "1", features = ["backtrace"] }

[[bin]]
name = "ninja_bootstrap"
test = false

[lints]
workspace = true
