[package]
name = "ninja_bootstrap"
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "ninja_bootstrap"
path = "main.rs"
test = false

[dependencies]
anyhow = "1"
camino = "1"
cargo_metadata = "0.18"
glob = "0.3"
serde = { version = "1", features = ["derive"] }
snafu = { version = "0.8", default-features = false, features = ["std"] }
toml = { version = "0.8", default-features = false, features = ["parse"] }

[dev-dependencies]
anyhow = { version = "1", features = ["backtrace"] }

[lints]
workspace = true
