[package]
name = "synchronize_backup"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1"
camino = "1"
clap = { version = "4", features = ["derive"] }
regex-lite = "0.1"
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }

[dev-dependencies]
assert_fs = { path = "../assert_fs" }
test_helper = { path = "../test_helper" }
