[package]
name = "synchronize_backup"
edition = "2021"

[dependencies]
anyhow = "1"
camino = "1"
clap = { version = "4", features = ["derive"] }
humantime = "2.1.0"
regex-lite = "0.1"
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }

[dev-dependencies]
assert_fs = { path = "../assert_fs" }
test_helper = { path = "../test_helper" }

[lints]
workspace = true
