[package]
name = "synchronize_partially"
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "synchronize_partially"
path = "main.rs"

[dependencies]
anyhow = "1"
camino = "1"
clap = { version = "4", features = ["derive"] }
common = { path = "../common" }
humantime = "2.1.0"

[dev-dependencies]
assert_fs = "1"

[lints]
workspace = true
