[package]
name = "renamer"
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "async_renamer"
path = "async_renamer.rs"

[[bin]]
name = "sync_renamer"
path = "sync_renamer.rs"

[lib]
path = "lib.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
common = { path = "../common" }
time = { version = "0.3", features = ["formatting", "macros"] }
tokio = { version = "1.40.0", features = ["fs", "rt"] }

[lints]
workspace = true
